--- a/question-service/src/main/resources/application.properties
+++ b/question-service/src/main/resources/application.properties
@@ -16,6 +16,7 @@
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+spring.application.name=question-service
 spring.datasource.url=jdbc:mysql://localhost:3306/questiondb
 spring.datasource.username=root
 spring.datasource.password=Rishi@123
